adding CMS functionality

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: owner-name/repo-name # Path to your Github repository
+  repo: Intrawest/static-boilerplate-netlify-cms # Path to your Github repository
   branch: master # Branch to update
   publish_mode: editorial_workflow
 
